# ai-podcast

./: .gitignore  .project-env  .project-tasks  README.md  pyproject.toml
assets/: config.json
scripts/: bootstrap_structure.sh  composite_segments.py  concat_final.py  cut_segments.py  inspect_wav2lip_bbox.py  make_crop_inputs.py  make_static_segment_videos.py  rttm_to_segments.py  run.sh  run_diarization_rttm.py  run_wav2lip_batch.py  smoke_diarization.py  smoke_diarization_sf.py  validate_segment_durations.py
src/aipodcast/: cli.py  config.py  video.py
